--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,10 @@ install(TARGETS semantic_grid_mapper
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(DIRECTORY launch 
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   set(ament_cmake_copyright_FOUND TRUE)
