Correctly use parameter file

--- a/config/grid_mapper_params.yaml
+++ b/config/grid_mapper_params.yaml
@@ -1,10 +1,10 @@
-semantic_grid_mapper:
+semantic_grid_mapper_node:
   ros__parameters:
     resolution: 0.1
     length: 15.0
-    width: 15.0
-    log_odd_min: -30.0
-    log_odd_max: 30.0
+    height: 15.0
+    log_odd_min: -100.0
+    log_odd_max: 100.0
     frame_id: "odom"
     use_sim_time: true
     input_topic: "/rgb_cloud"
