Correct transformation time of semantic pointcloud

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(std_msgs REQUIRED)
 find_package(grid_map_ros REQUIRED)
 find_package(grid_map_core REQUIRED)
 find_package(grid_map_msgs REQUIRED)
+find_package(grid_map_demos REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common io)
 find_package(tf2 REQUIRED)
@@ -24,6 +25,7 @@ find_package(pcl_ros REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(CGAL REQUIRED)
 find_package(GMP REQUIRED)
+find_package(filters REQUIRED)
 
 include_directories(
   include
@@ -40,12 +42,14 @@ ament_target_dependencies(semantic_grid_mapper
   grid_map_ros
   grid_map_core
   grid_map_msgs
+  grid_map_demos
   pcl_conversions
   tf2
   tf2_ros
   tf2_eigen
   tf2_geometry_msgs
   pcl_ros
+  filters
 )
 
 # Add this line to link GMP
