--- a/package.xml
+++ b/package.xml
@@ -14,12 +14,15 @@
   <depend>grid_map_ros</depend>
   <depend>grid_map_core</depend>
   <depend>grid_map_msgs</depend>
+  <depend>grid_map_demos</depend>
   <depend>pcl_conversions</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_eigen</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>pcl_ros</depend>
+  <depend>filters</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
