--- a/config/grid_mapper_params.yaml
+++ b/config/grid_mapper_params.yaml
@@ -15,4 +15,38 @@ semantic_grid_mapper_node:
     robot_height: 1.2
     max_veg_height: 0.4
 
+    filters:
+      # filter1:
+        # name: buffer_normalizer
+        # type: gridMapFilters/BufferNormalizerFilter
+
+      # filter2: # Duplicate layer.
+      #   name: duplicate
+      #   type: gridMapFilters/DuplicationFilter
+      #   params:
+      #     input_layer: ...
+      #     output_layer: ...
+
+      # filter2:  # Delete color layer.
+      #   name: delete_original_layers
+      #   type: gridMapFilters/DeletionFilter
+      #   params: 
+      #     layers: [color] # List of layers.
+
+      # filter3:  # Fill holes in the map with inpainting.
+      #   name: inpaint
+      #   type: gridMapCv/InpaintFilter
+      #   params:
+      #     input_layer: elevation
+      #     output_layer: elevation_inpainted
+      #     radius: 0.05
+
+      filter1:  # Reduce noise with a radial blurring filter.
+        name: mean_in_radius
+        type: gridMapFilters/MeanInRadiusFilter
+        params:
+          input_layer: min_height
+          output_layer: min_height_smooth
+          radius: 0.45
+
     
