--- a/config/mercator.yaml
+++ b/config/mercator.yaml
@@ -17,6 +17,8 @@ semantic_grid_mapper_node:
     robot_height: 1.0
     max_veg_height: 0.3
     max_sky_height: 2.0
+    robot_pose_with_covariance_topic: "ukf_pose"
+    robot_pose_cache_size: 200
 
     filters:
       # filter1:
