--- a/config/warthog.yaml
+++ b/config/warthog.yaml
@@ -16,6 +16,8 @@ semantic_grid_mapper_node:
     robot_height: 1.0
     max_veg_height: 0.3
     max_sky_height: 2.0
+    robot_pose_with_covariance_topic: "/fixposition/odometry_smooth"
+    robot_pose_cache_size: 400
 
     filters:
       # filter1:
